--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,4 @@
-
+---
 title: "Exploratory Analysis"
 output: html_document
 ---
@@ -15,7 +15,7 @@ Winter 2023
 
 ### Abstract
 
-Our focus is on the population of dogs in shelters. Focusing on the statistics of certain breed of dogs in the shelter, the gender, age, coat and whether or not they are fixed, to see the duration of how long they tend to stay in the shelter. To address this subject we will compare the statistics provided from the alldogdescprition data provided from the pudding dataset with each other.
+Our focus is on the population of dogs in shelters. Focusing on the statistics of certain breed of dogs in the shelter, the gender, age, coat and whether or not they are fixed, to see the duration of how long they tend to stay in the shelter. To address this subject we will compare the statistics provided from the alldogdescription data provided from the pudding dataset with each other.
 
 ### Keywords
 
@@ -42,27 +42,24 @@ Stregowski, Jenna. “10 Low-Maintenance Dog Breeds for Busy or Lazy Owners.” 
 Where did you find the data? Please include a link to the data source  
 Data found in Pudding:  https://github.com/the-pudding/data/tree/master/dog-shelters
 
-Who collected the data?  
-  Amber Thomas
+Who collected the data?
+  Amber Thomas  
 How was the data collected or generated?  
-  Generated from PetFinder API
+  Generated from PetFinder API  
 Why was the data collected?  
   Data was collected help more dogs get adopted and to better understand the traits of dogs in shelters and why dogs are in shelters. The compilation of this data set will give insights into why certain dogs are in shelters and what these dogs currently in shelters may have in common.
-How many observations (rows) are in your data?  58180
-How many features (columns) are in the data?  
-  36
+How many observations (rows) are in your data? 58180  
+How many features (columns) are in the data? 36  
 What, if any, ethical questions or questions of power do you need to consider when working with this data?  
-  Some ethical questions to consider when working with this data are how is the adoptability determined, who determines the adoptability, and are the criteria for adoptability the same accross the dataset. Additionally, there may be other factors that can help to determine
+  Some ethical questions to consider when working with this data are how is the adoptability determined, who determines the adoptability, and are the criteria for adoptability the same across the dataset. Additionally, there may be other factors that can help to determine.
 What are possible limitations or problems with this data?   (at least 200 words)
 Some limitations with this data set are that the standards for how the data is collected is unknown. For example, it is unknown whether the definition for whether or not a dog is adoptable is the same for every location in the data set. The dataset also may not contain data for every dog in the US, it only includes data for dogs in the PetFinder API system. Additionally, there is no information on how well the dogs are trained, which could play a large factor in whether or not someone would want to adopt a specific dog (it does however have a column for whether or not a dog is house trained). Another limitation to the data is that the categories for if a dog is compatable with other dogs, cats and children are all categorized as a simple yes or no. This could be misleading because a specific dogs reaction in these situations may depend on other factors that are not taken into account in this dataset. The purpose of the dataset is to help dogs find homes and therefore, the data provided could potentially be biased towards making dogs seem more adoptable. This could be entirely unintentional but must be considered when working with this data set.
 
 ### Implications
 
-<<<<<<< HEAD
 Providing information on the currently available dogs within various shelters can help improve the adoption rate. People are probably more willing to enter a shelter knowing the availability beforehand and also having a particular set of traits in mind. Another implication is that the population of the city where the shelter is located in could play a large role in the adoption of a dog. Cities with more residents may inherently result in a higher probability of adoption due to the sheer number of people. Even if a dog perfectly matches someone's desired qualities, the location can make them less willing to go due to how remote the place is. On the other hand, heavily populated areas see more adoptions just from convenience. From this, policymakers might be able to base their ideas on these subtleties. Additionally, since the shelters are all based in the United States, there is a possibility that certain traits are just favored by Americans overall. Further research might need to be conducted to find the preferences of other countries. This would not only allow for more universal conclusions but also gives more insight into the similarities/differences between each country.
-=======
+
 Technologists, designers, and policymakers can observe which dog demographic (e.g., dog age and coat) are most common in dog shelters. An implication they can draw from the data is which qualities of the dogs are the most and least desirable, as a high population of a type of dog in shelters imply low desirability/demand among potential dog owners. Another implication from the data for dog shelters is to adjust the price of dogs according to the demand for the qualities of the dogs; a dog with a certain age and type of coat can be priced higher or lower considering its degree of demand by looking at our data. Policymakers can take the data and consider enacting equity-focused legislative reforms that advocate for the types of dogs that are lower in demand and more likely to end up in shelters to enable those dogs are more likely to find a forever home. 
->>>>>>> 321d353 (Save changes)
 
 ### Limitations & Challenges
 
@@ -73,7 +70,7 @@ A challenge we anticipate within the dataset is determining which variables (i.e
 Within the data focusing on the coat of the dog we see that there is a high population of dogs with shorter hair. Whereas, dogs with wired and long coats are less seen in the dog shelters. For the duration that the dogs stayed in the shelters we compared this data to the dog's gender and saw that regardless of gender the data was similar in that within 1200 days approximately 18000-20000 dogs. Looking at the data for the dogs age, we saw a higher population of older dogs, however there was a change with senior dogs but we believe that, that was due to deaths of old age. Lastly, we saw that the breed most in shelters was Yorkshire Terrier, where as the least breed of dog in the shelters being Affenpinscher.
 
 ### Table
-```{r, echo=FALSE}
+```{r, echo=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 
 library(dplyr)
 library(ggplot2)
@@ -88,17 +85,16 @@ knitr::kable(agg_dog_table,
                            "Coat",
                            "Posted")
              )
-# agg_dog_table
 
 ```
 
-Describe why you included the table and what information it reveals
+In the table, we narrowed the variables down to the 5 different factors that we are evaluating to see if there is a correlation between certain characteristics and how it affects their adoptability. These variables include age, gender, breed, coat (fur/hair length), and date they were posted. We kept only 50 observations out of the 58180, arranged starting with the ones posted the earliest, so there were enough dogs and traits to compare to each other but reduced the number significantly to keep it simple and organized. 
 
 ### Chart 1
 
 Here's an example of how to run an R script inside an RMarkdown file:
 Problems: getting the color to go on the bars, and changing the order of the bars
-```{r, echo=FALSE}
+```{r chart 1, echo=FALSE, warning=FALSE, message=FALSE}
 source('Barchart.R')
 barchart
 
@@ -107,20 +103,17 @@ barchart
 In order to visually let our audience see the categorical data difference between the age range of the dogs in the shelter, we decided that a bar chart was the best method. By using the bar chart we are able to compare the stages of life that each dog is at through categorizing it by; baby, young, adult, and senior. We also added color to each bar to allow viewers a better visual comparison. The information in this chart reveals a correlation between the age of dogs and how many get left in the shelter. As a dog gets older, we see a larger quantity left in the shelter, however, there is the outlier of senior dogs that we see have the lowest quantity in the shelter. Alternatively, there are other factors that can contribute to this, for example dying of old age.
 
 ### Chart 2
-
-coat_pie_chart <- ggplot(allDogDescriptions, aes(x = coat, fill = coat)) +
-  geom_bar() +
-  labs(title = "Types of Coats in Dog Shelters",
-       x = "Coat",
-       y = "Number of Dogs") + 
-  coord_polar("y", start = 0)
+```{r chart 2, echo=FALSE, warning=FALSE, message=FALSE}
+source("second-chart.R")
 coat_pie_chart
   
+```  
+
 The pie chart reveals a visual representation of the distribution of coat types among the dog population in shelters. The coat types are divided into seven categories: curly, hairless, long, medium, short, wire, and NA. A vast majority of the data includes NA values. The chart displays that the most common type of coat in dog shelters is short, and the least common characteristics are hairless and curly.
 
 ### Chart 3
 
-```{r chart 3, echo=FALSE, warning=FALSE}
+```{r chart 3, echo=FALSE, warning=FALSE, message=FALSE}
 source('histogram.R')
 hist
 
